<resources>
    <string name="app_name">DB2P3</string>

    <!-- Index -->
    <string name="txtv_index_info">This is the main index for all of our queries.
        Click on any of the following queries to launch that queries page.</string>
    <string name="btn_index_query1">Run Query #1</string>
    <string name="btn_index_query2">Run Query #2</string>
    <string name="btn_index_query3">Run Query #3</string>
    <string name="btn_index_query4">Run Query #4</string>
    <string name="btn_index_query5">Run Query #5</string>
    <string name="btn_index_query6">Run Query #6</string>

    <!-- Query 1 -->
    <string name="txtv_query1_queryInfo">Find the names of authors who have purchased a book
        written by themselves. (aid and cid will not be the same).</string>
    <string name="btn_query1_runQuery">Run Query</string>
    <string name="txtv_query1_queryWarning">Results will appear below.</string>
    <string name="txtv_query1_queryResults">** Results will appear here **</string>

    <!-- Query 2 -->
    <string name="txtv_query2_queryInfo">User input one author name,
        find all the books written by the author(s).</string>
    <string name="edt_query2_queryHint">Enter part of an author\'s name, e.g "Dan Brown"</string>
    <string name="btn_query2_runQuery">Run Query</string>
    <string name="txtv_query2_queryWarning">Results will appear below.</string>
    <string name="txtv_query2_queryResults">** Results will appear here **</string>

    <!-- Query 3 -->
    <string name="txtv_query3_queryInfo">User input one customer name,
        find purchase history of the customer(s).</string>
    <string name="edt_query3_queryHint">Enter part of a customer\'s name, e.g "Stephen King"</string>
    <string name="btn_query3_runQuery">Run Query</string>
    <string name="txtv_query3_queryWarning">Results will appear below.</string>
    <string name="txtv_query3_queryResults">** Results will appear here **</string>

    <!-- Query 4 -->
    <string name="txtv_query4_queryInfo">User input one or more words of a book title, find all
        information of the books whose titles contain those words.</string>
    <string name="edt_query4_queryHint">Enter part of a title</string>
    <string name="btn_query4_runQuery">Run Query</string>
    <string name="txtv_query4_queryWarning">Results will appear below.</string>
    <string name="txtv_query4_queryResults">** Results will appear here **</string>

    <!-- Query 5 -->
    <string name="txtv_query5_queryInfo">User input a year and find the title of the best selling
        book of that year.</string>
    <string name="edt_query5_queryHint">For example 2015, 2016, 2017</string>
    <string name="btn_query5_runQuery">Run Query</string>
    <string name="txtv_query5_queryWarning">Results will appear below.</string>
    <string name="txtv_query5_queryResults">** Results will appear here **</string>

    <!-- Query 6 -->
    <string name="txtv_query6_queryInfo">Record the information that a CUSTOMER has purchased
        a book.</string>
    <string name="edt_query6_queryHint1">The Little Prince</string>
    <string name="edt_query6_queryHint2">Stephen King</string>
    <string name="btn_query6_runQuery">Run Query</string>
    <string name="txtv_query6_queryWarning">Results will appear below.</string>
    <string name="txtv_query6_queryResults">** Results will appear here **</string>

</resources>
